use anyhow::Result;
use log::{debug, error, info, warn};
use serde::{Deserialize, Serialize};
use solana_sdk::{
    instruction::Instruction,
    pubkey::Pubkey,
    signature::Keypair,
    transaction::Transaction,
};
use std::collections::HashMap;
use std::sync::Arc;
use std::time::{Duration, SystemTime, UNIX_EPOCH};
use tokio::sync::RwLock;

use crate::config::{Config, MEVStrategy};
use crate::proto::pumpswap::*;

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct MEVOpportunity {
    pub id: String,
    pub strategy: MEVStrategy,
    pub token_address: String,
    pub pool_address: String,
    pub expected_profit: f64,
    pub confidence_score: f64,
    pub gas_estimate: u64,
    pub deadline: u64,
    pub required_transactions: Vec<Transaction>,
    pub risk_score: f64,
    pub created_at: u64,
}

#[derive(Debug, Clone)]
pub struct MEVSignal {
    pub opportunity: MEVOpportunity,
    pub priority: MEVPriority,
    pub execution_plan: ExecutionPlan,
}

#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord)]
pub enum MEVPriority {
    Low = 1,
    Medium = 2,
    High = 3,
    Critical = 4,
}

#[derive(Debug, Clone)]
pub struct ExecutionPlan {
    pub transactions: Vec<Transaction>,
    pub estimated_gas: u64,
    pub max_slippage: f64,
    pub target_profit: f64,
    pub risk_mitigation: Vec<RiskMitigation>,
}

#[derive(Debug, Clone)]
pub enum RiskMitigation {
    StopLoss { percentage: f64 },
    TakeProfit { percentage: f64 },
    MaxGasPrice { amount: u64 },
    Timeout { duration_ms: u64 },
    SlippageProtection { max_slippage: f64 },
}

pub struct MEVDetector {
    config: Arc<RwLock<Config>>,
    active_opportunities: HashMap<String, MEVOpportunity>,
    price_history: HashMap<String, Vec<PricePoint>>,
    pool_liquidity: HashMap<String, u64>,
    last_update: u64,
}

#[derive(Debug, Clone)]
struct PricePoint {
    price: f64,
    timestamp: u64,
    volume: u64,
}

impl MEVDetector {
    pub fn new(config: Arc<RwLock<Config>>) -> Self {
        Self {
            config,
            active_opportunities: HashMap::new(),
            price_history: HashMap::new(),
            pool_liquidity: HashMap::new(),
            last_update: SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_secs(),
        }
    }
    
    pub async fn analyze_opportunities(&mut self, token_listings: &[TokenListing], price_updates: &[PriceUpdate]) -> Result<Vec<MEVSignal>> {
        let mut signals = Vec::new();
        
        // Update price history
        self.update_price_history(price_updates).await;
        
        // Analyze new token listings for arbitrage opportunities
        for listing in token_listings {
            if let Some(signal) = self.analyze_new_listing(listing).await? {
                signals.push(signal);
            }
        }
        
        // Analyze price updates for MEV opportunities
        for price_update in price_updates {
            if let Some(signal) = self.analyze_price_update(price_update).await? {
                signals.push(signal);
            }
        }
        
        // Clean up old opportunities
        self.cleanup_old_opportunities().await;
        
        // Sort signals by priority and expected profit
        signals.sort_by(|a, b| {
            b.priority.cmp(&a.priority)
                .then(b.opportunity.expected_profit.partial_cmp(&a.opportunity.expected_profit).unwrap_or(std::cmp::Ordering::Equal))
        });
        
        Ok(signals)
    }
    
    async fn analyze_new_listing(&mut self, listing: &TokenListing) -> Result<Option<MEVSignal>> {
        let config_guard = self.config.read().await;
        
        // Check if this token meets our criteria
        if listing.initial_liquidity < (config_guard.min_liquidity * 1e9) as u64 {
            return Ok(None);
        }
        
        // Analyze for front-running opportunities
        if config_guard.get_mev_strategies().contains(&MEVStrategy::FrontRun) {
            if let Some(signal) = self.detect_frontrun_opportunity(listing).await? {
                return Ok(Some(signal));
            }
        }
        
        // Analyze for arbitrage opportunities
        if config_guard.get_mev_strategies().contains(&MEVStrategy::Arbitrage) {
            if let Some(signal) = self.detect_arbitrage_opportunity(listing).await? {
                return Ok(Some(signal));
            }
        }
        
        Ok(None)
    }
    
    async fn analyze_price_update(&mut self, price_update: &PriceUpdate) -> Result<Option<MEVSignal>> {
        let config_guard = self.config.read().await;
        
        // Check for significant price movements that could indicate MEV opportunities
        let price_change_threshold = 0.05; // 5% price change
        let volume_threshold = 1000.0; // $1000 volume
        
        if price_update.volume_1h < volume_threshold {
            return Ok(None);
        }
        
        // Analyze for sandwich attacks
        if config_guard.get_mev_strategies().contains(&MEVStrategy::Sandwich) {
            if let Some(signal) = self.detect_sandwich_opportunity(price_update).await? {
                return Ok(Some(signal));
            }
        }
        
        // Analyze for back-running opportunities
        if config_guard.get_mev_strategies().contains(&MEVStrategy::BackRun) {
            if let Some(signal) = self.detect_backrun_opportunity(price_update).await? {
                return Ok(Some(signal));
            }
        }
        
        Ok(None)
    }
    
    async fn detect_frontrun_opportunity(&mut self, listing: &TokenListing) -> Result<Option<MEVSignal>> {
        // Simulate front-running opportunity detection
        let expected_profit = self.calculate_frontrun_profit(listing).await?;
        
        if expected_profit > 0.1 { // Minimum 0.1 SOL profit
            let opportunity = MEVOpportunity {
                id: format!("frontrun_{}", listing.token_address),
                strategy: MEVStrategy::FrontRun,
                token_address: listing.token_address.clone(),
                pool_address: listing.pool_address.clone(),
                expected_profit,
                confidence_score: 0.8,
                gas_estimate: 50000,
                deadline: SystemTime::now().duration_since(UNIX_EPOCH)?.as_secs() + 30,
                required_transactions: vec![], // Would be populated with actual transactions
                risk_score: 0.3,
                created_at: SystemTime::now().duration_since(UNIX_EPOCH)?.as_secs(),
            };
            
            let execution_plan = self.create_frontrun_execution_plan(&opportunity).await?;
            let priority = self.calculate_priority(&opportunity);
            
            return Ok(Some(MEVSignal {
                opportunity,
                priority,
                execution_plan,
            }));
        }
        
        Ok(None)
    }
    
    async fn detect_arbitrage_opportunity(&mut self, listing: &TokenListing) -> Result<Option<MEVSignal>> {
        // Simulate arbitrage opportunity detection
        let expected_profit = self.calculate_arbitrage_profit(listing).await?;
        
        if expected_profit > 0.05 { // Minimum 0.05 SOL profit
            let opportunity = MEVOpportunity {
                id: format!("arbitrage_{}", listing.token_address),
                strategy: MEVStrategy::Arbitrage,
                token_address: listing.token_address.clone(),
                pool_address: listing.pool_address.clone(),
                expected_profit,
                confidence_score: 0.9,
                gas_estimate: 100000,
                deadline: SystemTime::now().duration_since(UNIX_EPOCH)?.as_secs() + 60,
                required_transactions: vec![], // Would be populated with actual transactions
                risk_score: 0.2,
                created_at: SystemTime::now().duration_since(UNIX_EPOCH)?.as_secs(),
            };
            
            let execution_plan = self.create_arbitrage_execution_plan(&opportunity).await?;
            let priority = self.calculate_priority(&opportunity);
            
            return Ok(Some(MEVSignal {
                opportunity,
                priority,
                execution_plan,
            }));
        }
        
        Ok(None)
    }
    
    async fn detect_sandwich_opportunity(&mut self, price_update: &PriceUpdate) -> Result<Option<MEVSignal>> {
        // Simulate sandwich attack opportunity detection
        let expected_profit = self.calculate_sandwich_profit(price_update).await?;
        
        if expected_profit > 0.2 { // Minimum 0.2 SOL profit
            let opportunity = MEVOpportunity {
                id: format!("sandwich_{}", price_update.token_address),
                strategy: MEVStrategy::Sandwich,
                token_address: price_update.token_address.clone(),
                pool_address: String::new(), // Would be populated
                expected_profit,
                confidence_score: 0.7,
                gas_estimate: 150000,
                deadline: SystemTime::now().duration_since(UNIX_EPOCH)?.as_secs() + 10,
                required_transactions: vec![], // Would be populated with actual transactions
                risk_score: 0.6,
                created_at: SystemTime::now().duration_since(UNIX_EPOCH)?.as_secs(),
            };
            
            let execution_plan = self.create_sandwich_execution_plan(&opportunity).await?;
            let priority = self.calculate_priority(&opportunity);
            
            return Ok(Some(MEVSignal {
                opportunity,
                priority,
                execution_plan,
            }));
        }
        
        Ok(None)
    }
    
    async fn detect_backrun_opportunity(&mut self, price_update: &PriceUpdate) -> Result<Option<MEVSignal>> {
        // Simulate back-running opportunity detection
        let expected_profit = self.calculate_backrun_profit(price_update).await?;
        
        if expected_profit > 0.15 { // Minimum 0.15 SOL profit
            let opportunity = MEVOpportunity {
                id: format!("backrun_{}", price_update.token_address),
                strategy: MEVStrategy::BackRun,
                token_address: price_update.token_address.clone(),
                pool_address: String::new(), // Would be populated
                expected_profit,
                confidence_score: 0.85,
                gas_estimate: 80000,
                deadline: SystemTime::now().duration_since(UNIX_EPOCH)?.as_secs() + 20,
                required_transactions: vec![], // Would be populated with actual transactions
                risk_score: 0.4,
                created_at: SystemTime::now().duration_since(UNIX_EPOCH)?.as_secs(),
            };
            
            let execution_plan = self.create_backrun_execution_plan(&opportunity).await?;
            let priority = self.calculate_priority(&opportunity);
            
            return Ok(Some(MEVSignal {
                opportunity,
                priority,
                execution_plan,
            }));
        }
        
        Ok(None)
    }
    
    async fn calculate_frontrun_profit(&self, listing: &TokenListing) -> Result<f64> {
        // Simulate front-running profit calculation
        let base_profit = 0.5; // Base profit in SOL
        let liquidity_factor = (listing.initial_liquidity as f64 / 1e9).min(100.0) / 100.0;
        let random_factor = rand::random::<f64>() * 0.5 + 0.5; // 0.5 to 1.0
        
        Ok(base_profit * liquidity_factor * random_factor)
    }
    
    async fn calculate_arbitrage_profit(&self, listing: &TokenListing) -> Result<f64> {
        // Simulate arbitrage profit calculation
        let base_profit = 0.3; // Base profit in SOL
        let liquidity_factor = (listing.initial_liquidity as f64 / 1e9).min(50.0) / 50.0;
        let random_factor = rand::random::<f64>() * 0.3 + 0.7; // 0.7 to 1.0
        
        Ok(base_profit * liquidity_factor * random_factor)
    }
    
    async fn calculate_sandwich_profit(&self, price_update: &PriceUpdate) -> Result<f64> {
        // Simulate sandwich attack profit calculation
        let volume_factor = (price_update.volume_1h / 10000.0).min(1.0);
        let price_impact = (price_update.price_usd - price_update.price_usd * 0.95).abs() / price_update.price_usd;
        let base_profit = 0.4; // Base profit in SOL
        
        Ok(base_profit * volume_factor * price_impact)
    }
    
    async fn calculate_backrun_profit(&self, price_update: &PriceUpdate) -> Result<f64> {
        // Simulate back-running profit calculation
        let volume_factor = (price_update.volume_1h / 5000.0).min(1.0);
        let base_profit = 0.25; // Base profit in SOL
        let random_factor = rand::random::<f64>() * 0.4 + 0.6; // 0.6 to 1.0
        
        Ok(base_profit * volume_factor * random_factor)
    }
    
    async fn create_frontrun_execution_plan(&self, opportunity: &MEVOpportunity) -> Result<ExecutionPlan> {
        let config_guard = self.config.read().await;
        
        Ok(ExecutionPlan {
            transactions: vec![], // Would be populated with actual transactions
            estimated_gas: opportunity.gas_estimate,
            max_slippage: config_guard.max_slippage,
            target_profit: opportunity.expected_profit,
            risk_mitigation: vec![
                RiskMitigation::MaxGasPrice { amount: config_guard.max_gas_price },
                RiskMitigation::Timeout { duration_ms: 5000 },
                RiskMitigation::SlippageProtection { max_slippage: config_guard.max_slippage },
            ],
        })
    }
    
    async fn create_arbitrage_execution_plan(&self, opportunity: &MEVOpportunity) -> Result<ExecutionPlan> {
        let config_guard = self.config.read().await;
        
        Ok(ExecutionPlan {
            transactions: vec![], // Would be populated with actual transactions
            estimated_gas: opportunity.gas_estimate,
            max_slippage: config_guard.max_slippage,
            target_profit: opportunity.expected_profit,
            risk_mitigation: vec![
                RiskMitigation::MaxGasPrice { amount: config_guard.max_gas_price },
                RiskMitigation::Timeout { duration_ms: 10000 },
                RiskMitigation::SlippageProtection { max_slippage: config_guard.max_slippage * 0.5 },
            ],
        })
    }
    
    async fn create_sandwich_execution_plan(&self, opportunity: &MEVOpportunity) -> Result<ExecutionPlan> {
        let config_guard = self.config.read().await;
        
        Ok(ExecutionPlan {
            transactions: vec![], // Would be populated with actual transactions
            estimated_gas: opportunity.gas_estimate,
            max_slippage: config_guard.max_slippage,
            target_profit: opportunity.expected_profit,
            risk_mitigation: vec![
                RiskMitigation::MaxGasPrice { amount: config_guard.max_gas_price * 2 },
                RiskMitigation::Timeout { duration_ms: 3000 },
                RiskMitigation::SlippageProtection { max_slippage: config_guard.max_slippage * 2.0 },
            ],
        })
    }
    
    async fn create_backrun_execution_plan(&self, opportunity: &MEVOpportunity) -> Result<ExecutionPlan> {
        let config_guard = self.config.read().await;
        
        Ok(ExecutionPlan {
            transactions: vec![], // Would be populated with actual transactions
            estimated_gas: opportunity.gas_estimate,
            max_slippage: config_guard.max_slippage,
            target_profit: opportunity.expected_profit,
            risk_mitigation: vec![
                RiskMitigation::MaxGasPrice { amount: config_guard.max_gas_price },
                RiskMitigation::Timeout { duration_ms: 8000 },
                RiskMitigation::SlippageProtection { max_slippage: config_guard.max_slippage },
            ],
        })
    }
    
    fn calculate_priority(&self, opportunity: &MEVOpportunity) -> MEVPriority {
        let profit_score = opportunity.expected_profit;
        let confidence_score = opportunity.confidence_score;
        let risk_score = opportunity.risk_score;
        
        let combined_score = profit_score * confidence_score * (1.0 - risk_score);
        
        match combined_score {
            score if score > 0.8 => MEVPriority::Critical,
            score if score > 0.6 => MEVPriority::High,
            score if score > 0.4 => MEVPriority::Medium,
            _ => MEVPriority::Low,
        }
    }
    
    async fn update_price_history(&mut self, price_updates: &[PriceUpdate]) {
        for update in price_updates {
            let price_point = PricePoint {
                price: update.price_usd,
                timestamp: update.timestamp,
                volume: update.volume_1h as u64,
            };
            
            self.price_history
                .entry(update.token_address.clone())
                .or_insert_with(Vec::new)
                .push(price_point);
        }
        
        // Keep only last 1000 price points per token
        for (_, history) in self.price_history.iter_mut() {
            if history.len() > 1000 {
                history.drain(0..history.len() - 1000);
            }
        }
    }
    
    async fn cleanup_old_opportunities(&mut self) {
        let current_time = SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_secs();
        let cutoff_time = current_time - 300; // Remove opportunities older than 5 minutes
        
        self.active_opportunities.retain(|_, opportunity| {
            opportunity.created_at > cutoff_time
        });
    }
}
